--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-icons": "^4.3.1",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
