--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "canvas-confetti": "^1.5.1",
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "install": "^0.13.0",
     "npm": "^8.6.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^6.3.0",
