--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.0",
@@ -15,19 +18,22 @@
     "canvas-confetti": "^1.5.1",
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
+    "framer-motion": "^7.6.4",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "install": "^0.13.0",
     "npm": "^8.6.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
+    "react-halloween": "^0.0.3",
+    "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.16.7",
     "react-icons": "^4.3.1",
-    "react-responsive": "^8.2.0",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "5.0.1",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
