--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.6.0",
-    "@mui/material": "^5.6.0",
-    "@mui/styles": "^5.6.0",
-    "@mui/system": "^5.6.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.12.0",
+    "@mui/system": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^14.0.4",
@@ -26,7 +25,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga": "^3.3.0",
+    "react-ga4": "^2.1.0",
     "react-halloween": "^0.1.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.16.7",
