--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react-helpers": "^0.1.1",
+    "prettier": "2.8.8"
   }
 }
