--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
     "framer-motion": "^7.6.4",
+    "husky": "^8.0.3",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "install": "^0.13.0",
+    "lint-staged": "^15.0.2",
     "npm": "^8.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -45,6 +47,16 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -59,6 +71,6 @@
   },
   "devDependencies": {
     "eslint-plugin-react-helpers": "^0.1.1",
-    "prettier": "2.8.8"
+    "prettier": "^2.8.8"
   }
 }
